--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
   "license": "ISC",
   "dependencies": {
     "express": "^4.18.2",
-    "nodemailer": "^6.9.1"
+    "nodemailer": "^6.9.1",
+    "sweetalert2": "^11.7.5"
   },
   "devDependencies": {
     "concurrently": "^8.0.1"
