--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start": "concurrently \"cd application && npm start\" \"cd Server && nodemon index.js\""
+    "start": "concurrently \"cd client && npm start\" \"cd Server && nodemon index.js\""
   },
   "keywords": [],
   "author": "",
@@ -12,7 +12,19 @@
   "dependencies": {
     "express": "^4.18.2",
     "nodemailer": "^6.9.1",
-    "sweetalert2": "^11.7.5"
+    "sweetalert2": "^11.7.5",
+    "mysql": "^2.18.1",
+    "@testing-library/jest-dom": "^5.16.5",
+    "@testing-library/react": "^13.4.0",
+    "@testing-library/user-event": "^13.5.0",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
+    "react-native": "^0.71.5",
+    "react-router-dom": "^6.9.0",
+    "react-scripts": "^2.1.3",
+    "web-vitals": "^2.1.4",
+    "nth-check": "^2.1.1",
+    "loader-utils": "^1.4.2"
   },
   "devDependencies": {
     "concurrently": "^8.0.1"
