--- a/Server/package.json
+++ b/Server/package.json
@@ -1,8 +1,12 @@
 {
   "dependencies": {
+    "body-parser": "^1.20.2",
     "csv-parser": "^3.0.0",
     "dotenv": "^16.4.5",
+    "express": "^4.19.2",
     "fs": "^0.0.1-security",
+    "nodemailer": "^6.9.13",
+    "pg": "^8.11.5",
     "vercel": "^32.3.0"
   }
 }
