--- a/Server/package.json
+++ b/Server/package.json
@@ -1,5 +1,6 @@
 {
   "dependencies": {
+    "@vercel/postgres": "^0.8.0",
     "body-parser": "^1.20.2",
     "csv-parser": "^3.0.0",
     "dotenv": "^16.4.5",
