--- a/Server/package.json
+++ b/Server/package.json
@@ -10,5 +10,9 @@
     "nodemailer": "^6.9.13",
     "pg": "^8.11.5",
     "vercel": "^32.3.0"
+  },
+  "devDependencies": {
+    "@babel/core": "^7.24.5",
+    "@babel/preset-env": "^7.24.5"
   }
 }
