--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "express": "^4.18.2",
     "mysql": "^2.18.1",
     "nodemailer": "^6.9.1",
+    "react-scripts": "^5.0.1",
     "sweetalert2": "^11.6.13"
   },
   "devDependencies": {
