--- a/Server/package.json
+++ b/Server/package.json
@@ -4,7 +4,9 @@
     "body-parser": "^1.20.2",
     "cors": "^2.8.5",
     "csv-parser": "^3.0.0",
+    "dot": "^1.1.3",
     "dotenv": "^16.4.5",
+    "env": "^0.0.2",
     "express": "^4.19.2",
     "fs": "^0.0.1-security",
     "nodemailer": "^6.9.13",
