--- a/Server/package.json
+++ b/Server/package.json
@@ -1,346 +1,23 @@
 {
-  "name": "packages.json",
-  "version": "1.0.0",
-  "main": "index.js",
   "dependencies": {
-    "abbrev": "^1.1.1",
-    "accepts": "^1.3.8",
-    "acorn": "^8.11.3",
-    "acorn-walk": "^8.3.2",
-    "agent-base": "^6.0.2",
-    "ajv": "^6.12.6",
-    "ansi-regex": "^5.0.1",
-    "ansi-styles": "^3.2.1",
-    "any-promise": "^1.3.0",
-    "anymatch": "^3.1.3",
-    "aproba": "^2.0.0",
-    "are-we-there-yet": "^2.0.0",
-    "arg": "^4.1.0",
-    "array-flatten": "^1.1.1",
-    "async-listen": "^1.2.0",
-    "async-sema": "^3.1.1",
-    "babel-plugin-polyfill-corejs2": "^0.4.11",
-    "babel-plugin-polyfill-corejs3": "^0.10.4",
-    "babel-plugin-polyfill-regenerator": "^0.6.2",
-    "balanced-match": "^1.0.2",
-    "base64-js": "^1.5.1",
-    "binary-extensions": "^2.3.0",
-    "bindings": "^1.5.0",
-    "bl": "^4.1.0",
+    "@vercel/postgres": "^0.9.0",
     "body-parser": "^1.20.2",
-    "brace-expansion": "^1.1.11",
-    "braces": "^3.0.2",
-    "browserslist": "^4.23.0",
-    "bson": "^6.8.0",
-    "buffer": "^5.7.1",
-    "buffer-crc32": "^0.2.13",
-    "bufferutil": "^4.0.8",
-    "bytes": "^3.1.2",
-    "call-bind": "^1.0.7",
-    "caniuse-lite": "^1.0.30001620",
-    "chalk": "^2.4.2",
-    "chokidar": "^3.3.1",
-    "chownr": "^1.1.4",
-    "cliui": "^8.0.1",
-    "code-block-writer": "^10.1.1",
-    "color-convert": "^1.9.3",
-    "color-name": "^1.1.3",
-    "color-support": "^1.1.3",
-    "concat-map": "^0.0.1",
-    "console-control-strings": "^1.1.0",
-    "content-disposition": "^0.5.4",
-    "content-type": "^1.0.5",
-    "convert-hrtime": "^3.0.0",
-    "convert-source-map": "^2.0.0",
-    "cookie": "^0.6.0",
-    "cookie-signature": "^1.0.6",
-    "core-js-compat": "^3.37.1",
     "cors": "^2.8.5",
-    "create-require": "^1.1.1",
-    "cross-spawn": "^7.0.3",
     "csv-parser": "^3.0.0",
-    "debug": "^4.3.4",
-    "decompress-response": "^6.0.0",
-    "deep-extend": "^0.6.0",
-    "define-data-property": "^1.1.4",
-    "delegates": "^1.0.0",
-    "depd": "^2.0.0",
-    "destroy": "^1.2.0",
-    "detect-libc": "^2.0.3",
-    "diff": "^4.0.2",
     "dot": "^1.1.3",
     "dotenv": "^16.4.5",
-    "edge-runtime": "^2.5.7",
-    "ee-first": "^1.1.1",
-    "electron-to-chromium": "^1.4.776",
-    "emoji-regex": "^8.0.0",
-    "encodeurl": "^1.0.2",
-    "end-of-stream": "^1.4.4",
     "env": "^0.0.2",
-    "es-define-property": "^1.0.0",
-    "es-errors": "^1.3.0",
-    "esbuild": "^0.14.47",
-    "esbuild-windows-64": "^0.14.47",
-    "escalade": "^3.1.2",
-    "escape-html": "^1.0.3",
-    "escape-string-regexp": "^1.0.5",
-    "estree-walker": "^2.0.2",
-    "esutils": "^2.0.3",
-    "etag": "^1.8.1",
-    "events-intercept": "^2.0.0",
-    "execa": "^3.2.0",
-    "exit-hook": "^2.2.1",
-    "expand-template": "^2.0.3",
     "express": "^4.19.2",
-    "fast-deep-equal": "^3.1.3",
-    "fast-glob": "^3.3.2",
-    "fast-json-stable-stringify": "^2.1.0",
-    "fastq": "^1.17.1",
-    "faye-websocket": "^0.11.4",
-    "fd-slicer": "^1.1.0",
-    "file-uri-to-path": "^1.0.0",
-    "fill-range": "^7.0.1",
-    "finalhandler": "^1.2.0",
     "firebase": "^10.12.4",
-    "forwarded": "^0.2.0",
-    "fresh": "^0.5.2",
     "fs": "^0.0.1-security",
-    "fs-constants": "^1.0.0",
-    "fs-extra": "^8.1.0",
-    "fs-minipass": "^1.2.7",
-    "fs.realpath": "^1.0.0",
-    "function-bind": "^1.1.2",
-    "gauge": "^3.0.2",
-    "generic-pool": "^3.4.2",
-    "gensync": "^1.0.0-beta.2",
-    "get-caller-file": "^2.0.5",
-    "get-intrinsic": "^1.2.4",
-    "get-stream": "^5.2.0",
-    "github-from-package": "^0.0.0",
-    "glob": "^7.2.3",
-    "glob-parent": "^5.1.2",
-    "globals": "^11.12.0",
-    "gopd": "^1.0.1",
-    "graceful-fs": "^4.2.11",
-    "has-flag": "^3.0.0",
-    "has-property-descriptors": "^1.0.2",
-    "has-proto": "^1.0.3",
-    "has-symbols": "^1.0.3",
-    "has-unicode": "^2.0.1",
-    "hasown": "^2.0.2",
-    "http-errors": "^2.0.0",
-    "http-parser-js": "^0.5.8",
-    "https-proxy-agent": "^5.0.1",
-    "human-signals": "^1.1.1",
-    "iconv-lite": "^0.4.24",
-    "idb": "^7.1.1",
-    "ieee754": "^1.2.1",
-    "inflight": "^1.0.6",
-    "inherits": "^2.0.4",
-    "ini": "^1.3.8",
-    "ipaddr.js": "^1.9.1",
-    "is-binary-path": "^2.1.0",
-    "is-core-module": "^2.13.1",
-    "is-extglob": "^2.1.1",
-    "is-fullwidth-code-point": "^3.0.0",
-    "is-glob": "^4.0.3",
-    "is-number": "^7.0.0",
-    "is-stream": "^2.0.1",
-    "isarray": "^0.0.1",
-    "isexe": "^2.0.0",
-    "js-tokens": "^4.0.0",
-    "jsesc": "^2.5.2",
-    "json-schema-to-ts": "^1.6.4",
-    "json-schema-traverse": "^0.4.1",
-    "json5": "^2.2.3",
-    "jsonfile": "^4.0.0",
-    "lodash.camelcase": "^4.3.0",
-    "lodash.debounce": "^4.0.8",
-    "long": "^5.2.3",
-    "lru-cache": "^5.1.1",
-    "make-dir": "^3.1.0",
-    "make-error": "^1.3.6",
-    "media-typer": "^0.3.0",
-    "memory-pager": "^1.5.0",
-    "merge-descriptors": "^1.0.1",
-    "merge-stream": "^2.0.0",
-    "merge2": "^1.4.1",
-    "methods": "^1.1.2",
-    "micro": "^9.3.5-canary.3",
-    "micromatch": "^4.0.5",
-    "mime": "^1.6.0",
-    "mime-db": "^1.52.0",
-    "mime-types": "^2.1.35",
-    "mimic-fn": "^2.1.0",
-    "mimic-response": "^3.1.0",
-    "minimatch": "^3.1.2",
-    "minimist": "^1.2.8",
-    "minipass": "^2.9.0",
-    "minizlib": "^1.3.3",
-    "mkdirp": "^1.0.4",
-    "mkdirp-classic": "^0.5.3",
     "mongodb": "^6.8.0",
-    "mongodb-connection-string-url": "^3.0.1",
-    "mri": "^1.2.0",
-    "ms": "^2.1.2",
-    "napi-build-utils": "^1.0.2",
-    "negotiator": "^0.6.3",
-    "node-abi": "^3.65.0",
-    "node-fetch": "^2.6.7",
-    "node-gyp-build": "^4.8.1",
-    "node-machine-id": "^1.1.12",
-    "node-releases": "^2.0.14",
     "nodemailer": "^6.9.13",
-    "nopt": "^5.0.0",
-    "normalize-path": "^3.0.0",
-    "npm-run-path": "^4.0.1",
-    "npmlog": "^5.0.1",
-    "object-assign": "^4.1.1",
-    "object-inspect": "^1.13.1",
-    "on-finished": "^2.4.1",
-    "once": "^1.4.0",
-    "onetime": "^5.1.2",
-    "os-paths": "^4.4.0",
-    "p-finally": "^2.0.1",
-    "parse-ms": "^2.1.0",
-    "parseurl": "^1.3.3",
-    "path-browserify": "^1.0.1",
-    "path-is-absolute": "^1.0.1",
-    "path-key": "^3.1.1",
-    "path-match": "^1.2.4",
-    "path-parse": "^1.0.7",
-    "path-to-regexp": "^6.2.1",
-    "pend": "^1.2.0",
     "pg": "^8.11.5",
-    "pg-cloudflare": "^1.1.1",
-    "pg-connection-string": "^2.6.4",
-    "pg-int8": "^1.0.1",
-    "pg-pool": "^3.6.2",
-    "pg-protocol": "^1.6.1",
-    "pg-types": "^2.2.0",
-    "pgpass": "^1.0.5",
-    "picocolors": "^1.0.0",
-    "picomatch": "^2.3.1",
-    "postgres-array": "^2.0.0",
-    "postgres-bytea": "^1.0.0",
-    "postgres-date": "^1.0.7",
-    "postgres-interval": "^1.2.0",
-    "prebuild-install": "^7.1.2",
-    "pretty-ms": "^7.0.1",
-    "promisepipe": "^3.0.0",
-    "protobufjs": "^7.3.2",
-    "proxy-addr": "^2.0.7",
-    "pump": "^3.0.0",
-    "punycode": "^2.3.1",
-    "qs": "^6.11.0",
-    "queue-microtask": "^1.2.3",
-    "range-parser": "^1.2.1",
-    "raw-body": "^2.5.2",
-    "rc": "^1.2.8",
-    "readable-stream": "^3.6.2",
-    "readdirp": "^3.3.0",
     "realm": "^12.12.1",
-    "regenerate": "^1.4.2",
-    "regenerate-unicode-properties": "^10.1.1",
-    "regenerator-runtime": "^0.14.1",
-    "regenerator-transform": "^0.15.2",
-    "regexpu-core": "^5.3.2",
-    "regjsparser": "^0.9.1",
-    "require-directory": "^2.1.1",
-    "require-from-string": "^2.0.2",
-    "resolve": "^1.22.8",
-    "resolve-from": "^5.0.0",
-    "reusify": "^1.0.4",
-    "rimraf": "^3.0.2",
-    "run-parallel": "^1.2.0",
-    "safe-buffer": "^5.2.1",
-    "safer-buffer": "^2.1.2",
-    "safevalues": "^0.6.0",
-    "semver": "^7.3.5",
-    "send": "^0.18.0",
-    "serve-static": "^1.15.0",
-    "set-blocking": "^2.0.0",
-    "set-function-length": "^1.2.2",
-    "setprototypeof": "^1.2.0",
-    "shebang-command": "^2.0.0",
-    "shebang-regex": "^3.0.0",
-    "side-channel": "^1.0.6",
-    "signal-exit": "^4.0.2",
-    "simple-concat": "^1.0.1",
-    "simple-get": "^4.0.1",
-    "sparse-bitfield": "^3.0.3",
-    "split2": "^4.2.0",
-    "stat-mode": "^0.3.0",
-    "statuses": "^2.0.1",
-    "stream-to-array": "^2.3.0",
-    "stream-to-promise": "^2.2.0",
-    "string-width": "^4.2.3",
-    "string_decoder": "^1.3.0",
-    "strip-ansi": "^6.0.1",
-    "strip-final-newline": "^2.0.0",
-    "strip-json-comments": "^2.0.1",
-    "supports-color": "^5.5.0",
-    "supports-preserve-symlinks-flag": "^1.0.0",
-    "tar": "^4.4.18",
-    "tar-fs": "^2.1.1",
-    "tar-stream": "^2.2.0",
-    "time-span": "^4.0.0",
-    "to-fast-properties": "^2.0.0",
-    "to-regex-range": "^5.0.1",
-    "toidentifier": "^1.0.1",
-    "tr46": "^0.0.3",
-    "tree-kill": "^1.2.2",
-    "ts-morph": "^12.0.0",
-    "ts-node": "^10.9.1",
-    "ts-toolbelt": "^6.15.5",
-    "tslib": "^2.6.3",
-    "tunnel-agent": "^0.6.0",
-    "type-is": "^1.6.18",
-    "typescript": "^4.9.5",
-    "uid-promise": "^1.0.0",
-    "undici": "^5.26.5",
-    "unicode-canonical-property-names-ecmascript": "^2.0.0",
-    "unicode-match-property-ecmascript": "^2.0.0",
-    "unicode-match-property-value-ecmascript": "^2.1.0",
-    "unicode-property-aliases-ecmascript": "^2.1.0",
-    "universalify": "^0.1.2",
-    "unpipe": "^1.0.0",
-    "update-browserslist-db": "^1.0.16",
-    "uri-js": "^4.4.1",
-    "utf-8-validate": "^6.0.3",
-    "util-deprecate": "^1.0.2",
-    "utils-merge": "^1.0.1",
-    "uuid": "^3.3.2",
-    "v8-compile-cache-lib": "^3.0.1",
-    "vary": "^1.1.2",
-    "vercel": "^32.7.2",
-    "web-vitals": "^0.2.4",
-    "webidl-conversions": "^3.0.1",
-    "websocket-driver": "^0.7.4",
-    "websocket-extensions": "^0.1.4",
-    "whatwg-url": "^5.0.0",
-    "which": "^2.0.2",
-    "wide-align": "^1.1.5",
-    "wrap-ansi": "^7.0.0",
-    "wrappy": "^1.0.2",
-    "ws": "^8.14.2",
-    "xdg-app-paths": "^5.1.0",
-    "xdg-portable": "^7.3.0",
-    "xtend": "^4.0.2",
-    "y18n": "^5.0.8",
-    "yallist": "^3.1.1",
-    "yargs": "^17.7.2",
-    "yargs-parser": "^21.1.1",
-    "yauzl": "^2.10.0",
-    "yauzl-clone": "^1.0.4",
-    "yauzl-promise": "^2.1.3",
-    "yn": "^3.1.1"
+    "vercel": "^32.3.0"
   },
-  "devDependencies": {},
-  "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
-  },
-  "author": "",
-  "license": "ISC",
-  "description": ""
+  "devDependencies": {
+    "@babel/core": "^7.24.5",
+    "@babel/preset-env": "^7.24.5"
+  }
 }
